# NetSchoolDiary

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  __main__.py  diary.py  test.py
frontend/: Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/diary/: route.ts
frontend/app/api/file/[id]/: route.ts
frontend/app/api/homework/[id]/: route.ts
frontend/components/: day-tabs.tsx  lesson-card.tsx  schedule-view.tsx  theme-toggle.tsx
frontend/lib/: schedule.ts  types.ts
